docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesDataSource__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfsp__ETMCompatibilityEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if data source is enabled for ETM compatibility</description>
        <label>ETM Compatibility Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfsp__ReferenceFields__c</fullName>
        <description>JSON array of selected reference fields</description>
        <label>Reference Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__SourceId__c</fullName>
        <label>Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Data Source</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>